2008-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (drawgraph): Don't forget to draw a polyline even
	if it has only a single segment.
	Bugfix

2008-06-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c (draw_inside_color_smooth_box_postscript): Fix colour of
	the 2nd box in the colour box for negative palette in postscript
	output.
	SF Bug #2000751

2008-06-22  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Plot with vectors did not honor linestyles requested via
	'set style increment user'.

2008-06-20  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (delete_linestyle) src/unset.c src/setshow.h:
	Pass the head of the linestyle list as a parameter rather than
	hardcoding it to always be the list headed by first_linestyle.
	Remove unused routine assign_linestyle_tag().

	* src/misc.c src/misc.h src/term.c (lp_use_property):
	Move this routine from misc.c to term.c.  This cleans up a botched
	header dependency (the prototype was already in term_api.h rather than
	being in misc.h).

2008-06-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/aquaterm.trm (AQUA_init AQUA_boxfill AQUA_filled_polygon):
	Query aquaterm for alpha channel support; use it if present.
	Add fill styles to the filled polygon routine.

2008-06-18  Ethan Merritt  <merritt@u.washington.edu>

	* src/fit.c: Dynamic allocation for fit script string.

2008-06-17  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/plotstyles.gnu demo/cities.dat:
	Revise the plot style examples to avoid pattern fill since pdfcairo is
	bad at it.  Use a more interesting demo to illustrate label plots.

2008-06-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp:
	Remove deprecated dc.BeginDrawing() dc.EndDrawing()

2008-06-14  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/datafile.h (df_no_fpe_trap, evaluate_inside_using): Add
	missing 'extern' to declaration of new variables.
